# TradeMind

./: .gitignore  .railwayignore  Dockerfile  Procfile  RAILWAY_SETUP.md  README.md  docker-compose.yml  nixpacks.toml  railway.json  railway.toml  start.sh  vercel.json
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 4fbde05a2206_add_trailing_stop_and_oco_fields.py  abc123def456_add_backtest_tables.py  f48e5002e1fc_add_is_testnet_to_exchange_connection.py
backend/src/app/: __init__.py  main.py
backend/src/app/api/v1/: router.py
backend/src/app/core/: __init__.py  circuit_breaker.py  config.py  connection_registry.py  database.py  encryption.py  events.py  logging.py  rate_limiter.py  redis.py  retry.py  websocket.py  websocket_event_consumer.py
backend/src/app/domain/: __init__.py
backend/src/app/domain/backtest/: __init__.py  engine.py
backend/src/app/domain/market/: __init__.py  indicators.py  orderbook.py
backend/src/app/domain/risk/: __init__.py  management.py  portfolio_heat.py
backend/src/app/domain/trading/: __init__.py  position.py
backend/src/app/models/: __init__.py  backtest.py  exchange.py  portfolio.py  risk.py  strategy.py  trade.py
backend/src/app/schemas/: __init__.py  llm.py  strategy.py  websocket.py
backend/src/app/services/: execution.py  market.py  orders.py  portfolio.py  strategy_llm.py  trailing_stop.py
backend/src/app/workers/: __init__.py  backtest_tasks.py  beat_schedule.py  celery_app.py  strategy_automation.py  tasks.py  worker.py
docs/: API.md  README.md  (+4 more)
(+57 files in other folders)
