[project]
name = "trademind-backend"
version = "0.1.0"
description = "Autonomous trading bot platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",  # For Alembic sync migrations
    "redis>=5.0.1",
    "celery>=5.3.4",
    "ccxt>=4.1.0",
    "pandas>=2.1.3",
    "pandas-ta>=0.3.14b0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.2",
    "websockets>=12.0",
    "openai>=1.12.0",  # For Grok API (xAI uses OpenAI-compatible API)
    "langgraph>=0.0.40",
    "instructor>=1.0.0",
    "pydantic>=2.5.0",  # For Instructor
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "types-redis>=4.6.0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

